src/objects/Service_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Lookup field to the account related to the PA Setup form</description>
        <formula>Subscription__r.Zuora__Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <formula>IF(Approved_Services_Setup__c= TRUE, NOW(), NULL)</formula>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Services_Setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Services Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Rules__c</fullName>
        <label>Billing Rules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Project_End__c</fullName>
        <label>Estimated Project End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Project_Start__c</fullName>
        <label>Estimated Project Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation_of_Rev_Method__c</fullName>
        <label>Explanation of Rev Method</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaBS_Location__c</fullName>
        <formula>text( Subscription__r.Quote__r.zqu__Opportunity__r.Pivotal_Labs_Delivery_Office__c )</formula>
        <label>Labs Office Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agile App Dev</fullName>
                </value>
                <value>
                    <fullName>APLE</fullName>
                </value>
                <value>
                    <fullName>App Replatforming</fullName>
                </value>
                <value>
                    <fullName>BDS Advisory Services</fullName>
                </value>
                <value>
                    <fullName>BDS Business Critical Support (BCS)</fullName>
                </value>
                <value>
                    <fullName>BDS Customer Solutions (CS)</fullName>
                </value>
                <value>
                    <fullName>Big Data Suite (BDS)</fullName>
                </value>
                <value>
                    <fullName>Customer Solutions (CS)</fullName>
                </value>
                <value>
                    <fullName>Customer Success Org (CSO)</fullName>
                </value>
                <value>
                    <fullName>Customer Support (GSS)</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
                <value>
                    <fullName>Data Transformation</fullName>
                </value>
                <value>
                    <fullName>DevEnablement</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Global- Engagement Director</fullName>
                </value>
                <value>
                    <fullName>Global- Platform Acceleration Lab (PAL)</fullName>
                </value>
                <value>
                    <fullName>Innovation Journey</fullName>
                </value>
                <value>
                    <fullName>Innovation Workshops</fullName>
                </value>
                <value>
                    <fullName>PCF Advisory Services</fullName>
                </value>
                <value>
                    <fullName>PCF Business Critical Support (BCS)</fullName>
                </value>
                <value>
                    <fullName>PCF Customer Solutions (CS)</fullName>
                </value>
                <value>
                    <fullName>Pivotal Cloud Foundry (PCF)</fullName>
                </value>
                <value>
                    <fullName>Pivotal Training</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Transformation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OA_Project_Rev_Rec_Method__c</fullName>
        <label>OA Project ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Amount_Converted_TCV__c</fullName>
        <formula>Subscription__r.Quote__r.zqu__Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Amount (Converted TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>Subscription__r.Quote__r.zqu__Opportunity__r.CloseDate</formula>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Name__c</fullName>
        <formula>Subscription__r.Quote__r.zqu__Opportunity__r.Name</formula>
        <label>Opp Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Number__c</fullName>
        <formula>Subscription__r.Quote__r.zqu__Opportunity__r.Opportunity_Number__c</formula>
        <label>Opp Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Items_to_Note__c</fullName>
        <label>Other Items to Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Rules__c</fullName>
        <label>Revenue Rules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Time and Materials</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Ratable</fullName>
                </value>
                <value>
                    <fullName>Percentage of Completion</fullName>
                </value>
                <value>
                    <fullName>On Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <formula>Text(Subscription__r.Quote__r.zqu__Opportunity__r.Core_Order_Processed__c)</formula>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipName>PA_Setups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <formula>Subscription__r.Zuora__Account__r.Theater__c</formula>
        <label>Theater</label>
        <type>Text</type>
    </fields>
    <label>Service Setup</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Service Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>